# compote

./: .gitignore  CMakeLists.txt  README.md
examples/: run_calibration.sh
examples/config/: camera.js  images.js  intrinsics.js  params.js  poses.js
examples/obs/: bap-R12-A.csv  center-R12-A.csv
script/: run_calib.sh
src/blur/src/: utils.h
src/blurcalib/: CMakeLists.txt
src/blurcalib/src/: blurcalib.cpp  types.h  utils.cpp
src/blurcalib/src/optimization/: kappa.cpp  kappa.h
src/blurcalib/src/optimization/errors/: blur.cpp  blur.h
src/blurcalib/src/processing/calibration/: blur.cpp  calibration.h
src/calibrate/: CMakeLists.txt
src/calibrate/src/: calibrate.cpp  utils.cpp  utils.h
src/detect/: CMakeLists.txt
src/detect/src/: detect.cpp  utils.cpp  utils.h
src/evaluate/: CMakeLists.txt
src/evaluate/src/: evaluate.cpp  utils.cpp  utils.h
src/evaluate/src/stats/: linear_evaluation.cpp  linear_raytrix_evaluation.cpp  utils.cpp  utils.h
src/extrinsics/: CMakeLists.txt
src/extrinsics/src/: extrinsics.cpp  utils.cpp
src/extrinsics/src/stats/: linear_evaluation.cpp  linear_raytrix_evaluation.cpp  utils.cpp
src/invdistortion/src/: utils.h
src/invdistortioncalib/: CMakeLists.txt
src/invdistortioncalib/src/: invdistortion.cpp  utils.cpp
src/precalibrate/: CMakeLists.txt
src/precalibrate/src/: precalibrate.cpp  utils.cpp  utils.h
